Remove align top for list icon, fix header overwrite, no width auto link

--- a/src/partials/elements/_list.sass
+++ b/src/partials/elements/_list.sass
@@ -263,8 +263,8 @@ ol.ts.horizontal.list li:before,
 //       Header
 //-------------------//
 
-.ts.list .item .header,
-.ts.list .list .item .header
+.ts.list .item .header:not(.ts),
+.ts.list .list .item .header:not(.ts)
     display      : block
     font-weight  : $list_itemHeaderFontWeight
     color        : $list_itemHeaderColor
@@ -280,7 +280,7 @@ ol.ts.horizontal.list li:before,
 .ts.list .item .icon:only-child,
 .ts.list .list .item .icon:only-child
     display       : inline-block
-    vertical-align: top
+    //vertical-align: top
 
 //-------------------//
 //      Content
@@ -1159,7 +1159,6 @@ ol.ts.horizontal.list li:before,
 .ts.link.list.list a.item,
 .ts.link.list.list .item a:not(.ts)
     color: $list_linkListItemColor
-    width: auto
 
 .ts.link.list.list a.item:not(.active):hover,
 .ts.link.list.list .item:not(.active) a:not(.ts):hover
